--- a/bin/demo/build
+++ b/bin/demo/build
@@ -1,12 +1,48 @@
 #!/bin/bash
 
+SDK_API_VERSION=23
+BUILD_TOOLS_VERSION=24.0.0
 ORNEW_TA_HOME=${ORNEW_HOME}/tensorflow-android
 cd ${ORNEW_TA_HOME}/demo
 git clone https://github.com/tensorflow/tensorflow.git
 cd tensorflow
-patch -u WORKSPACE < ${ORNEW_TA_HOME}/demo/WORKSPACE.20160705.diff
-echo y | android update sdk -u -t "android-23"
-echo y | android update sdk -u -t "build-tools-24.0.0"
+patch -up0 WORKSPACE <<EOS
+--- WORKSPACE
++++ WORKSPACE
+@@ -1,18 +1,18 @@
+ workspace(name = "org_tensorflow")
+ 
+ # Uncomment and update the paths in these entries to build the Android demo.
+-#android_sdk_repository(
+-#    name = "androidsdk",
+-#    api_level = 23,
+-#    build_tools_version = "23.0.1",
+-#    # Replace with path to Android SDK on your system
+-#    path = "<PATH_TO_SDK>",
+-#)
+-#
+-#android_ndk_repository(
+-#    name="androidndk",
+-#    path="<PATH_TO_NDK>",
+-#    api_level=21)
++android_sdk_repository(
++    name = "androidsdk",
++    api_level = ${SDK_API_VERSION},
++    build_tools_version = "${BUILD_TOOLS_VERSION}",
++    # Replace with path to Android SDK on your system
++    path = "${ANDROID_HOME}",
++)
++
++android_ndk_repository(
++    name="androidndk",
++    path="${ANDROID_NDK_HOME}",
++    api_level=21)
+ 
+ # Please add all new TensorFlow dependencies in workspace.bzl.
+ load("//tensorflow:workspace.bzl", "tf_workspace")
+EOS
+echo y | android update sdk -u -t "android-${SDK_API_VERSION}"
+echo y | android update sdk -u -t "build-tools-${BUILD_TOOLS_VERSION}"
 wget https://storage.googleapis.com/download.tensorflow.org/models/inception5h.zip -O /tmp/inception5h.zip
 unzip /tmp/inception5h.zip -d tensorflow/examples/android/assets/
 bazel build //tensorflow/examples/android:tensorflow_demo
